Fix lighthouse contrast ratio issues + update readme

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,5 +37,5 @@ a {
   opacity: 0.9 !important;
 }
 .mat-form-field-label {
-  color: rgba(0, 0, 0, 0.8) !important;
+  color: inherit !important;
 }
